syntax = "proto3";

package filesystem;

import "cloud/disk_manager/internal/pkg/services/filesystem/protos/filesystem.proto";
import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/filesystem/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateFilesystemRequest {
    FilesystemId Filesystem = 1;
    string ProjectId = 2;
    string CloudId = 3;
    string FolderId = 4;
    uint32 BlockSize = 5;
    uint64 BlocksCount = 6;
    types.FilesystemKind Kind = 7;
}

message CreateFilesystemTaskState {}
